app-in-apps/yaml/pastefy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastefy
  labels:
    app: pastefy
  namespace: pastefy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pastefy
  template:
    metadata:
      labels:
        app: pastefy
    spec:
      containers:
        - name: pastefy
          image: interaapps/pastefy:latest
          ports:
            - containerPort: 80



---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: pastefy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-data
