app-in-apps/yaml/pastefy/service-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pastefy-service-ingress
  labels:
    app: pastefy
  namespace: pastefy
spec:
  selector:
    app: pastefy
  ports:
    - name: ui
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: pastefy
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
